text typer updated

--- a/public/tuiter/css/explore.css
+++ b/public/tuiter/css/explore.css
@@ -46,6 +46,10 @@
     color: var(--secondary-color) !important;
     border: 0px !important;
 }
+.white-type:focus {
+    color: #fff;
+}
+
 .nav-link .ac{
     border-bottom: solid 2px blue !important;
 }
