--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.ml-5{
+  margin-left: 5px !important;
+}
+.mr-5{
+  margin-right: 5px !important;
+}
